// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markets should render 1`] = `
<div
  className="cr-markets"
>
  <Table
    data={
      Array [
        Array [
          "ETH/BTC",
          "0.223100",
          <span
            className="__positive"
          >
            +50.00%
          </span>,
        ],
        Array [
          "ETH/LTC",
          "0.223100",
          <span
            className="__positive"
          >
            +25.00%
          </span>,
        ],
        Array [
          "LTC/BTC",
          "0.223100",
          <span
            className="__negative"
          >
            -5.00%
          </span>,
        ],
      ]
    }
    filters={
      Array [
        Object {
          "filter": [Function],
          "name": "All",
        },
        Object {
          "filter": [Function],
          "name": "ETH",
        },
        Object {
          "filter": [Function],
          "name": "BTC",
        },
        Object {
          "filter": [Function],
          "name": "LTC",
        },
      ]
    }
    header={
      Array [
        "Pair",
        "Price",
        "24h Change",
      ]
    }
    onSelect={[Function]}
    titleComponent="Markets"
  />
  <FilterInput
    data={
      Array [
        Array [
          "ETH/BTC",
          "0.223100",
          "+50.00%",
        ],
        Array [
          "ETH/LTC",
          "0.223100",
          "+25.00%",
        ],
        Array [
          "LTC/BTC",
          "0.223100",
          "-5.00%",
        ],
      ]
    }
    filter={[Function]}
    onFilter={[Function]}
    placeholder=""
  />
</div>
`;

exports[`Markets should render empty data 1`] = `
<div
  className="cr-markets"
>
  <Table
    data={
      Array [
        Array [
          "",
          "",
          "",
        ],
      ]
    }
    filters={
      Array [
        Object {
          "filter": [Function],
          "name": "All",
        },
      ]
    }
    header={
      Array [
        "Pair",
        "Price",
        "24h Change",
      ]
    }
    onSelect={[Function]}
    titleComponent="Markets"
  />
  <FilterInput
    data={Array []}
    filter={[Function]}
    onFilter={[Function]}
    placeholder=""
  />
</div>
`;
